# protein-monte-carlo

./: .gitignore  LICENSE  README.md  deltE.csv  example_config.yml  pyproject.toml  tmp_run.yml
data/: demo_sequences.csv
examples/: batch_screen.py  minimal_run.ipynb
protein_mc/: __init__.py
protein_mc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
protein_mc/cli/: run_simulation.py
protein_mc/core/: energy.py  monte_carlo.py  sequence_ops.py
protein_mc/io/: config.py  loaders.py
protein_mc/models/: esm_wrapper.py
protein_mc/utils/: progress.py
tests/: test_energy.py  test_monte_carlo.py
